--- a/index.html
+++ b/index.html
@@ -28,59 +28,64 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="p-3 border bg-light">
-                        <div class="row">
+                    <div class="p-2 border bg-light">
+                        <div class="row income">
                             <h3> Income</h3>
-                            <div class="d-flex gap-3 mx-5 p-3">
+                            <div class="d-flex gap-2 mx-5 p-2">
                                 <p>Income :</p>
-                                <input id="income" class="p-2" type="text" placeholder="Input Income">
+                                <input id="income-input" class="p-2 mx-2" type="text" placeholder="Input Income">
                             </div>
                         </div>
                         <hr>
-                        <div class="row">
+                        <div class="row expenses">
                             <h3>Expenses</h3>
-                            <div class="d-flex gap-3 mx-5 p-3">
+                            <div class="d-flex gap-2 mx-5 p-2">
                                 <p>Food :</p>
-                                <input id="food-expense" class="p-2" type="text" placeholder="Food Expense">
+                                <input id="food-expense" class="p-2  mx-2" type="text" placeholder="Food Expense">
                             </div>
-                            <div class="d-flex gap-3 mx-5 p-3">
-                                <p>Rent :</p>
-                                <input id="rent-expense" class="p-2" type="text" placeholder="Rent Expense">
+                            <div class="d-flex gap-2 mx-5 p-2">
+                                <p> Rent :</p>
+                                <input id="rent-expense" class="p-2  mx-2" type="text" placeholder="Rent Expense">
                             </div>
-                            <div class="d-flex gap-3 mx-5 p-3">
+                            <div class="d-flex gap-2 mx-5 p-2">
                                 <p>Clothes :</p>
-                                <input id="cloth-expense" class="p-2" type="text" placeholder="Cloth Expense">
+                                <input id="cloth-expense" class="p-2  mx-2" type="text" placeholder="Cloth Expense">
                             </div>
-                            <button>Calculate</button>
+                            <button class="btn">Calculate</button>
 
-                            <div class="mx-5 p-3">
-                                <!-- <div class="notify-section"> -->
-                                <p id="error-message">Please provide positive numbers into all input
+                            <!-- <div class="mx-5 p-2"> -->
+                            <div class="notify-section">
+
+                                <p id="error-message" class="notify">Please provide positive numbers into all input
                                     fields.</p>
-                                <p id="invalid-message">Expense can not exceed your income.</p>
+                                <p id="invalid-message" class="notify">Expense can not exceed your income.</p>
                             </div>
 
-                            <div class="d-flex gap-3 mx-5 p-3">
+
+                            <p>Total Expenses : <span id="total-expense">0</span></p>
+
+
+                            <!-- <div class="d-flex gap-2 mx-5 p-2">
                                 <p>Total Expenses :</p>
                                 <span id="total-expense">0</span>
-                            </div>
-                            <div class="d-flex gap-3 mx-5 p-3">
-                                <p>Balance :</p>
-                                <span id="balance">0</span>
-                            </div>
-                            <div class="d-flex gap-3 mx-5 p-3">
+                            </div> -->
+                            <!-- <div class="d-flex gap-2 mx-5 p-2"> -->
+                            <p>Balance : <span id="balance">0</span></p>
+                            <!-- </div> -->
+                            <div class="d-flex gap-2 mx-5 p-2">
                                 <p>Save :</p>
-                                <input id="save-percentage" class="p-2" type="text" placeholder="Save Percentage">%
+                                <input id="save-percentage" class="p-2  mx-2" type="text"
+                                    placeholder="Save Percentage">%
                             </div>
-                            <button>Save</button>
-                            <div class="d-flex gap-3 mx-5 p-3">
-                                <p>Saving Amount :</p>
-                                <span id="saving-amount">0</span>
-                            </div>
-                            <div class="d-flex gap-3 mx-5 p-3">
-                                <p>Remaining Balance :</p>
-                                <span id="remaining-balance">0</span>
-                            </div>
+                            <button class="btn">Save</button>
+                            <!-- <div class="d-flex gap-2 mx-5 p-2"> -->
+                            <p>Saving Amount : <span id="saving-amount">0</span></p>
+
+                            <!-- </div> -->
+                            <!-- <div class="d-flex gap-2 mx-5 p-2"> -->
+                            <p>Remaining Balance : <span id="remaining-balance">0</span></p>
+
+                            <!-- </div> -->
                         </div>
                     </div>
                 </div>
