--- a/index.html
+++ b/index.html
@@ -29,16 +29,18 @@
                 </div>
                 <div class="col-md-6">
                     <div class="p-2 border bg-light">
+                        <!-- Income Section  -->
                         <div class="row income">
-                            <h3> Income</h3>
+                            <h4> Income</h4>
                             <div class="d-flex gap-2 mx-5 p-2">
                                 <p>Income :</p>
                                 <input id="income-input" class="p-2 mx-2" type="text" placeholder="Input Income">
                             </div>
                         </div>
                         <hr>
+                        <!-- Expenses Section  -->
                         <div class="row expenses">
-                            <h3>Expenses</h3>
+                            <h4>Expenses</h4>
                             <div class="d-flex gap-2 mx-5 p-2">
                                 <p>Food :</p>
                                 <input id="food-expense" class="p-2  mx-2" type="text" placeholder="Food Expense">
@@ -51,41 +53,27 @@
                                 <p>Clothes :</p>
                                 <input id="cloth-expense" class="p-2  mx-2" type="text" placeholder="Cloth Expense">
                             </div>
-                            <button class="btn">Calculate</button>
+                            <button id="calculate-button" class="btn">Calculate</button>
 
-                            <!-- <div class="mx-5 p-2"> -->
                             <div class="notify-section">
-
                                 <p id="error-message" class="notify">Please provide positive numbers into all input
                                     fields.</p>
                                 <p id="invalid-message" class="notify">Expense can not exceed your income.</p>
                             </div>
 
-
-                            <p>Total Expenses : <span id="total-expense">0</span></p>
-
-
-                            <!-- <div class="d-flex gap-2 mx-5 p-2">
-                                <p>Total Expenses :</p>
-                                <span id="total-expense">0</span>
-                            </div> -->
-                            <!-- <div class="d-flex gap-2 mx-5 p-2"> -->
+                            <p class="mt-3">Total Expenses : <span id="total-expense">0</span></p>
                             <p>Balance : <span id="balance">0</span></p>
-                            <!-- </div> -->
+                            <hr>
+                            <!-- Sava Section  -->
                             <div class="d-flex gap-2 mx-5 p-2">
                                 <p>Save :</p>
                                 <input id="save-percentage" class="p-2  mx-2" type="text"
                                     placeholder="Save Percentage">%
                             </div>
                             <button class="btn">Save</button>
-                            <!-- <div class="d-flex gap-2 mx-5 p-2"> -->
-                            <p>Saving Amount : <span id="saving-amount">0</span></p>
 
-                            <!-- </div> -->
-                            <!-- <div class="d-flex gap-2 mx-5 p-2"> -->
+                            <p class="mt-3">Saving Amount : <span id="saving-amount">0</span></p>
                             <p>Remaining Balance : <span id="remaining-balance">0</span></p>
-
-                            <!-- </div> -->
                         </div>
                     </div>
                 </div>
