--- a/index.html
+++ b/index.html
@@ -70,7 +70,13 @@
                                 <input id="save-percentage" class="p-2  mx-2" type="text"
                                     placeholder="Save Percentage">%
                             </div>
-                            <button class="btn">Save</button>
+                            <button id="save-button" class="btn">Save</button>
+                            <div class="notify-section">
+                                <p id="error-saving-message" class="notify">Please provide positive numbers into all
+                                    input
+                                    fields.</p>
+                                <p id="invalid-saving-message" class="notify">You have no enough money for savings.</p>
+                            </div>
 
                             <p class="mt-3">Saving Amount : <span id="saving-amount">0</span></p>
                             <p>Remaining Balance : <span id="remaining-balance">0</span></p>
