error handle and function

--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
                             </div>
                             <button id="save-button" class="btn">Save</button>
                             <div class="notify-section">
-                                <p id="error-saving-message" class="notify">Please provide positive numbers into all
-                                    input
-                                    fields.</p>
-                                <p id="invalid-saving-message" class="notify">You have no enough money for savings.</p>
+                                <p id="error-saving-message" class="notify">Please provide positive number into save
+                                    field.</p>
+                                <p id="invalid-saving-message" class="notify">You have no enough money into your balance
+                                    as your required saving.</p>
                             </div>
 
                             <p class="mt-3">Saving Amount : <span id="saving-amount">0</span></p>
