--- a/index.html
+++ b/index.html
@@ -32,45 +32,78 @@
                         <!-- Income Section  -->
                         <div class="row income">
                             <h4> Income</h4>
-                            <div class="d-flex gap-2 mx-5 p-2">
-                                <p>Income :</p>
-                                <input id="income-input" class="p-2 mx-2" type="text" placeholder="Input Income">
-                            </div>
+                            <table class="my-2">
+                                <tr>
+                                    <td>
+                                        <p>Income :</p>
+                                    </td>
+                                    <td>
+                                        <input id="income-input" class="p-2 mx-2" type="text"
+                                            placeholder="Input Income">
+                                    </td>
+                                </tr>
+                            </table>
                         </div>
                         <hr>
                         <!-- Expenses Section  -->
                         <div class="row expenses">
                             <h4>Expenses</h4>
-                            <div class="d-flex gap-2 mx-5 p-2">
-                                <p>Food :</p>
-                                <input id="food-expense" class="p-2  mx-2" type="text" placeholder="Food Expense">
-                            </div>
-                            <div class="d-flex gap-2 mx-5 p-2">
-                                <p> Rent :</p>
-                                <input id="rent-expense" class="p-2  mx-2" type="text" placeholder="Rent Expense">
-                            </div>
-                            <div class="d-flex gap-2 mx-5 p-2">
-                                <p>Clothes :</p>
-                                <input id="cloth-expense" class="p-2  mx-2" type="text" placeholder="Cloth Expense">
-                            </div>
-                            <button id="calculate-button" class="btn">Calculate</button>
+                            <table class="mt-3">
+                                <tr>
+                                    <td>
+                                        <p>Food : </p>
+                                    </td>
+                                    <td>
+                                        <input id="food-expense" class="p-2  mx-2" type="text"
+                                            placeholder="Food Expense">
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <p> Rent : </p>
+                                    </td>
+                                    <td>
+                                        <input id="rent-expense" class="p-2  mx-2 my-2" type="text"
+                                            placeholder="Rent Expense">
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <p>Clothes :</p>
+                                    </td>
+                                    <td>
+                                        <input id="cloth-expense" class="p-2  mx-2" type="text"
+                                            placeholder="Cloth Expense">
+                                    </td>
+                                </tr>
+                            </table>
+
+                            <button id="calculate-button" class="btn my-2 w-75">Calculate</button>
 
                             <div class="notify-section">
-                                <p id="error-message" class="notify">Please provide positive numbers into all input
-                                    fields.</p>
+                                <p id="error-message" class="notify">Please provide positive numbers into all
+                                    input fields.</p>
                                 <p id="invalid-message" class="notify">Expense can not exceed your income.</p>
                             </div>
 
                             <p class="mt-3">Total Expenses : <span id="total-expense">0</span></p>
                             <p>Balance : <span id="balance">0</span></p>
+
                             <hr>
                             <!-- Sava Section  -->
-                            <div class="d-flex gap-2 mx-5 p-2">
-                                <p>Save :</p>
-                                <input id="save-percentage" class="p-2  mx-2" type="text"
-                                    placeholder="Save Percentage">%
-                            </div>
-                            <button id="save-button" class="btn">Save</button>
+                            <table class="my-2">
+                                <tr>
+                                    <td>
+                                        <p>Save :</p>
+                                    </td>
+                                    <td>
+                                        <input id="save-percentage" class="p-2  mx-2" type="text"
+                                            placeholder="Save Percentage">
+                                        <span>%</span>
+                                    </td>
+                                </tr>
+                            </table>
+                            <button id="save-button" class="btn my-2 w-75">Save</button>
                             <div class="notify-section">
                                 <p id="error-saving-message" class="notify">Please provide positive number into save
                                     field.</p>
